<resources>

    <!--application name-->
    <string name="app_name">9X Movies</string>

    <!-- Tab name -->
    <string name="tab1">New Release</string>
    <string name="tab2">Category</string>
    <string name="selected_category">Category</string>
    <string name="all_video">All Video</string>
    <string name="more_btn">More</string>
    <string name="top_video">Latest</string>

    <!--about information-->
    <string name="app_version">Version 1.0</string>
    <string name="app_email">getSubgmail.com</string>
    <string name="app_copyright">Copyright &#169;  All rights reserved</string>
    <string name="app_policy">Privacy Policy &#169;  All rights reserved</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_policy">Privacy Policy</string>



    <!--Real Admob Ids-->
    <string name="admob_banner_id">ca-app-pub-6536289728630034/9085297732</string>
    <string name="admob_interstitial_id">ca-app-pub-6536289728630034/6610343489</string>


<!--Test Add Mob IDS-->
<!--    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->


    <!-- Set to @string/admob_off to disable admob and to admob_on to enable admob -->
    <string name="admob_visibility">@string/admob_on</string>
    <!--Value Enable AdMob-->
    <string name="admob_on">0</string>
    <!--Value Disable AdMob-->
    <string name="admob_off">2</string>

    <!-- youtube -->
    <string name="youtube_api_key">AIzaSyBg9BZ2oW0dW83kj_w6pAdytAPgJfTpea4</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="more_app">https:/</string>
    <string name="more_app2">https:/</string>

    <!--navigation drawer menu name-->
    <string name="drawer_home">Home</string>
    <string name="drawer_cat">Category</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_more2">Privacy Policy</string>
    <string name="drawer_setting">Other</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>

    <!--preferences settings-->
    <string name="title_activity_settings">Other</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_rate">Rate</string>
    <string name="pref_header_more">More</string>
    <string name="pref_header_more2">More2</string>
    <string name="pref_header_about_summary">Information about application</string>
    <string name="pref_header_rate_summary">Give your rate and feedback</string>
    <string name="pref_header_more_summary">More apps from developer</string>
    <string name="pref_header_more_summary2">More2 apps from developer</string>

    <!--network-->
    <string name="failed_connect_network">Some Internet Faliure !!!</string>
    <string name="loading">Loading..</string>

    <!--others-->
    <string name="search_query_text">Search&#8230;</string>
    <string name="search_hint">Hint</string>
    <string name="menu_share">Share</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_fav">Add to Favorite</string>
    <string name="no_favorite">No Favorite Found</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_moreapp2">More App2</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="menu_search">Search</string>

    <string name="id_1">1</string>
    <string name="search_any_song_search_songs_layout">Search Any Song</string>


</resources>
