<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_cat"
            android:icon="@drawable/ic_category"
            android:title="@string/drawer_cat" />

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_favorite"
            android:visible="false"
            android:title="@string/drawer_favorite" />

        <item
            android:id="@+id/drawer_rate"
            android:icon="@drawable/ic_pref_rate"
            android:checkable="false"
            android:title="@string/drawer_rate" />

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/ic_pref_more"
            android:checkable="false"
            android:title="@string/drawer_more" />
			
        <item
            android:id="@+id/drawer_more2"
            android:icon="@drawable/ic_pref_more2"
            android:checkable="false"
            android:title="@string/drawer_more2" />			

        <item
            android:id="@+id/drawer_setting"
            android:icon="@drawable/ic_settings"
            android:checkable="false"
            android:title="@string/drawer_setting" />
    </group>

</menu>